<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    tools:context=".PushActivity">


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:orientation="horizontal"
            android:id="@+id/radio_button"
            android:paddingTop="@android:dimen/app_icon_size"
            android:onClick="radioClick">

            <RadioButton
                android:id="@+id/Bart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bart" />

            <RadioButton
                android:id="@+id/Lisa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lisa" />

            <RadioButton
                android:id="@+id/Ralph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ralph" />

            <RadioButton
                android:id="@+id/Milhouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/milhouse" />
        </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp">

        <EditText
            android:id="@+id/Grade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="2"
            android:hint="@string/grade"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp">
        <EditText
            android:id="@+id/Subject"
            android:layout_width="0dp"
            android:hint="@string/subject"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp">

        <EditText
            android:id="@+id/CourseID"
            android:hint="@string/course_id"
            android:layout_width="0dp"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20sp">

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/push"
            android:onClick="PushClick"
            android:layout_weight="1"
            />

    </LinearLayout>

</LinearLayout>